# embedded-utils

./: .gitignore  CMakeLists.txt  README.md  embedded_utils_flags.h.in  embedded_utils_flags_template.txt
inc/: at.h  error.h  math.h  maths.h  parser.h  string.h  strings.h  swreg.h  terminal.h  terminal_hw.h
src/: at.c  error.c  math.c  maths.c  parser.c  string.c  strings.c  swreg.c  terminal.c  terminal_hw.c
